Reader: Fix various card spacing inconsistencies

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -15,7 +15,7 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 
 	@include breakpoint( ">660px" ) {
 		margin: 0;
-		padding: 20px 0;
+		padding: 18px 0 20px;
 	}
 
 	&.has-thumbnail {
